# pic_practices

./: CMakeLists.txt  README.md  practica1.cpp  practica2.cpp  practica3.cpp  practica4.cpp  practica5.cpp  practica6.cpp  practica7.cpp  practica8.cpp
